# 2D-Tank-Shooter-Multiplayer

./: CMakeLists.txt  README.md  main.cpp
src/: Client.cpp  Client.h  Server.cpp  Server.h  settings.h
src/game/: Player.cpp  Player.h  Projectile.cpp  Projectile.h  World.cpp  World.h
